--- a/core/components/login/templates/site.html
+++ b/core/components/login/templates/site.html
@@ -7,7 +7,7 @@
         <form>
           <label class="item item-input item-stacked-label">
             <span class="input-label">Username</span>
-            <input type="email" placeholder="Username" ng-model="uname" required>
+            <input type="text" placeholder="Username" ng-model="uname" required>
           </label>
           <div class="item">
               <button class="button connect_new" ng-click="connect1(uname)">{{ 'mm.login.connect' | translate }}</button>
